--- a/Resources/Prototypes/Reagents/biological.yml
+++ b/Resources/Prototypes/Reagents/biological.yml
@@ -37,6 +37,29 @@
       volume: 6
 
 - type: reagent
+  id: ZombieBlood
+  name: reagent-name-zombie-blood
+  group: Biological
+  desc: reagent-desc-zombie-blood
+  physicalDesc: reagent-physical-desc-necrotic
+  flavor: bitter
+  color: "#2b0700"
+  metabolisms:
+    Drink:
+      # Disgusting!
+      effects:
+      - !type:SatiateThirst
+        factor: -0.5
+    Poison:
+      effects:
+      - !type:HealthChange
+        damage:
+          types:
+            Poison: 4
+      - !type:Vomit
+        probability: 0.25
+
+- type: reagent
   id: Slime
   name: reagent-name-slime
   group: Biological
